# njmtech-mail-oauth-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db  vercel.json
.github/workflows/: build.yml  publish.yml
alembic/: env.py
alembic/versions/: 2f222905f433_initial_migration.py
api/: main.py
api/auth/: base.py  google.py  microsoft.py  router.py  schemas.py
api/core/: database.py  security.py
api/models/: __init__.py  base.py  enums.py  schema.py
api/repositories/: user_mail_account.py
app/: main.py
app/auth/: base.py  google.py  microsoft.py  microsoft_router.py  router.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  base.py  enums.py  schema.py
app/repositories/: user_mail_account.py
docs/: prompt.md
github/: release.yml
migrations/: README  env.py  script.py.mako
tests/: conftest.py  test_auth.py  test_main.py
