[project]
name = "njmtech-mail-oauth-api"
version = "0.1.1"
description = "This is a simple FastAPI application to upload files to Vercel Blob storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "fastapi[standard]",
   "uvicorn[standard]",
   "sqlalchemy[asyncio]",
   "alembic",
   "asyncpg",
   "httpx",
   "python-dotenv",
   "pydantic",
   "pydantic-settings",
   "google-auth-httplib2",
   "google-api-python-client"
]
